<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">campusdefender</string>
    <string name="refused_permission">拒绝了权限</string>
    <string name="more">更多</string>
    <string name="search">搜索</string>
    <string name="login_by_account">账号登录</string>
    <string name="please_select_school">请选择学校</string>
    <string name="login_by_code">验证码登录</string>
    <string name="please_input_code">请输入手机验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="login_regist_mean_agree">登录注册代表同意</string>
    <string name="user_agreement">用户协议</string>
    <string name="and">和</string>
    <string name="agreement_and_login">同意协议并登录</string>
    <string name="send_success">发送成功</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首页</string>
    <string name="message">消息</string>
    <string name="my">我的</string>
    <string name="today_schedule">今天日程</string>
    <string name="on_school">上学</string>
    <string name="off_school">放学</string>
    <string name="stop_work">停用</string>
    <string name="working">进行中</string>
    <string name="finished">已结束</string>
    <string name="not_start">未开始</string>
    <string name="trans_alert">事务提醒</string>
    <string name="login_out">退出登录</string>
    <string name="confirm_to_login_out">确认要退出登录吗？</string>
    <string name="i_am_teacher">我是老师</string>
    <string name="i_am_parent">我是家长</string>
    <string name="switch_identity">切换身份</string>
    <string name="complete">完成</string>
    <string name="teacher">老师</string>
    <string name="student">学生</string>
    <string name="parent">家长</string>
    <string name="my_menu_drag_to_sort">我的应用(可拖拽调整顺序)</string>
    <string name="confirm_to_quit_edit">确认要放弃编辑吗？</string>
    <string name="customize_up_to">最多自定义</string>
    <string name="num_menu">个菜单</string>
    <string name="save_success">保存成功</string>
    <string name="account_set">账号设置</string>
    <string name="real_name">真实姓名</string>
    <string name="change_pwd">修改密码</string>
    <string name="collect_face">人脸采集</string>
    <string name="head_avator">头像</string>
    <string name="change_phone">变更手机号</string>
    <string name="upload_success">上传成功</string>
    <string name="set_real_name">设置真实姓名</string>
    <string name="real_name_des">真实姓名：</string>
    <string name="please_input_real_name">请输入您的真实姓名</string>
    <string name="update_success">修改成功</string>

</resources>
