<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.main.home.editmenu.EditMenuActivity">

    <com.witaction.common.widget.HeaderView
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:Right_Text="@string/complete"
        app:Right_TextColor="@color/green"
        app:Right_Text_Show="false"
        app:Title="@string/more" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableStart="@drawable/shape_green_horizental_line"
        android:drawableEnd="@drawable/shape_green_horizental_line"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center"
        android:paddingTop="@dimen/dp_14"
        android:paddingBottom="@dimen/dp_05"
        android:text="@string/my_menu_drag_to_sort"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>